--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.5.0",
+    "react-markdown": "^10.1.0",
     "react-quill": "^2.0.0"
   },
   "devDependencies": {
