--- a/.gitignore
+++ b/.gitignore
@@ -9,7 +9,6 @@
 # next.js
 /.next/
 /out/
-/dist/
 
 # production
 /build
@@ -22,13 +21,14 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-.pnpm-debug.log*
 
-# local env files
-.env*.local
+
 
 # vercel
 .vercel
+
+# vscode
+.vscode/
 
 # typescript
 *.tsbuildinfo
