--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "next-themes": "^0.4.6",
     "react": "^18",
     "react-dom": "^18",
+    "react-hot-toast": "^2.4.1",
     "react-icons": "^5.5.0",
     "react-markdown": "^10.1.0",
     "react-quill": "^2.0.0"
