--- a/package.json
+++ b/package.json
@@ -4,17 +4,22 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "next build && next-sitemap",
     "start": "next start",
     "lint": "next lint",
     "fix-deps": "npm audit fix"
   },
   "dependencies": {
+    "@heroicons/react": "^2.2.0",
     "@supabase/auth-helpers-nextjs": "^0.10.0",
     "@supabase/supabase-js": "^2.39.7",
     "@tailwindcss/typography": "^0.5.16",
+    "chart.js": "^4.4.9",
     "critters": "^0.0.23",
+    "date-fns": "^4.1.0",
+    "gsap": "^3.12.7",
     "next": "^14.2.25",
+    "next-sitemap": "^4.2.3",
     "next-themes": "^0.4.6",
     "react": "^18",
     "react-dom": "^18",
