--- a/package.json
+++ b/package.json
@@ -34,5 +34,9 @@
     "eslint-config-next": "14.1.3",
     "postcss": "^8.5.3",
     "tailwindcss": "^3.4.17"
+  },
+  "engines": {
+    "node": ">=18.0.0",
+    "npm": ">=8.0.0"
   }
 }
